fixes, readability increase css

--- a/assets/scss/_markdown.scss
+++ b/assets/scss/_markdown.scss
@@ -1,4 +1,8 @@
 .markdown-body {
+  * {
+    word-break: break-word;
+  }
+
   h1,
   h2,
   h3,
@@ -8,7 +12,8 @@
     margin-top: 24px;
     margin-bottom: 16px;
     font-weight: var(--base-text-weight-semibold, 600);
-    line-height: 1.25;
+    line-height: 30px;
+    letter-spacing: -0.016em;
 
     a {
       text-decoration: none;
@@ -56,6 +61,17 @@
     font-weight: 400;
   }
 
+  p,
+  ul,
+  pre,
+  img,
+  blockquote,
+  figure {
+    line-height: 32px;
+    letter-spacing: -0.003em;
+    margin-bottom: 1.8em;
+  }
+
   p:has(> img) {
     text-align: center;
   }
@@ -67,7 +83,6 @@
     border: 2px solid var(--bs-secondary-bg-subtle);
     border-radius: 5px;
     padding: 15px;
-    margin: 15px 0;
     font-size: 12px;
     word-wrap: normal;
 
